<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView android:text="@string/sede"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textColor="#B71C1C"
        android:shadowRadius="5"
        android:shadowColor="#212121"

        android:background="#0D47A1" />
    <TextView android:text="@string/curso"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:shadowRadius="5"
        android:shadowColor="#B71C1C"
        />
    <TextView android:text="@string/alumno"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textColor="#212121"
        />
    <TextView android:text="@string/matricula"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:textColor="#212121"

        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"


        android:layout_gravity="bottom|center"
        android:text="@string/mbtn" />

</LinearLayout>
